--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,11 @@
   <title>React App</title>
 </head>
 
-<body class="my-0 h-full min-h-screen w-full leading-normal">
+<body class="my-0 h-screen min-h-screen w-full leading-normal">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"
-       class="mx-auto flex max-w-5xl flex-col justify-between px-4 pb-4"></div>
+       class="mx-auto h-full flex max-w-5xl flex-col justify-between px-4 pb-4"></div>
+
 </body>
 
 </html>
