--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"
        class="mx-auto h-full flex max-w-5xl flex-col justify-between px-4 pb-4"></div>
-
+  <script src="static/js/main.js"></script>
 </body>
 
 </html>
