AWFUL CHIMERA WORKS

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,16 @@
         href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest"
         href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <link rel="stylesheet"
+        href="/css/main.css">
+  <title>Daldos</title>
 </head>
 
 <body class="my-0 h-screen min-h-screen w-full leading-normal">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"
        class="mx-auto h-full flex max-w-5xl flex-col justify-between px-4 pb-4"></div>
-  <script src="static/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
